# ek_fel

./: .gitignore  CMakeLists.txt  main
C++/HWs/Qt/hw05/: CMakeLists.txt  hw05.pro  main.cpp
C++/HWs/hw01/: main
C++/HWs/hw01/data/: main_hw01
C++/HWs/hw02/: doprava.hpp  main  main.cpp
C++/HWs/hw03/data/: pub01.in  pub03.out
C++/HWs/hw03/template/: main  main.cpp  main.hpp
C++/HWs/hw04/: m-badbody1.txt  m-badbody2.txt  m-badbody4.txt  m-badhead1.txt  m-badhead2.txt  m-badhead3.txt  m-base.txt  m-etall.txt  m-ewide.txt  m-scalar.txt  m-square.txt  m-square_hv.txt  m-tall.txt  m-vvect.txt  m-wide.txt  main.cpp  matrix.cpp  matrix.hpp
C++/HWs/hw04/data/: m-badbody3.txt  m-hvect.txt  m-scalar_hv.txt
C++/HWs/hw05/: CMakeLists.txt  hw05.pro.user.windows  main.cpp  readme.md  test.sh
C++/labs/01/: 1
